--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="js/main.js"></script>
     <title>Code4CT</title>
 </head>
@@ -12,6 +13,10 @@
     <!-- The nav bar starts here -->
     <nav>
         <div class="navbar">
+            <div class="logo">
+                <img src="img/code4ct-logo-1.jpg" alt="logo">
+            </div>
+
             <a class="active" href="#">HOME</a>
             <a href="#">COURSES</a>
             <a href="#">ABOUT</a>
@@ -21,7 +26,7 @@
             <div class="search_container">
                 <form>
                 <input type="text" placeholder="Search..." name="search">
-                <button type="submit"><i class="fa fa-search"></i></button>
+                <button class="search_button" type="submit"><i class="fa fa-search"></i></button>
                 </form>
             </div>
         </div>
