finished the nav bar

--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
     <!-- The nav bar starts here -->
     <nav>
         <div class="navbar">
-            <div class="logo">
+            <!-- <div class="logo"> -->
                 <img src="img/code4ct-logo-1.jpg" alt="logo">
-            </div>
+            <!-- </div> -->
 
+            <div class="nav_wrapper">
             <a class="active" href="#">HOME</a>
             <a href="#">COURSES</a>
             <a href="#">ABOUT</a>
             <a href="#">CONTACT</a>
             <a href="#">PORTFOLIO</a>
+            </div>  
 
             <div class="search_container">
                 <form>
