--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@
     <!-- The nav bar ends here -->
 
     <!-- The banner starts here -->
-    <!-- <section class="banner">
-        <h1 class="main_heading">Young Women Leveraging Tech for Social Innovation</h1>
-    </section> -->
+    <section class="banner">
+        <h1 class="main_heading">Young Women Leveraging Tech for Social Innovation</h1><br>
+        <p>We want to see young women empowered to leverage technology for social innovation, so that there is greater diversity in the African tech industry. We want high school girls to have an enabling environment to imagine and create new technology that is relevant to a South African context.</p>
+
+        
+    </section>
 
 
 </body>
