--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
         <h1 class="main_heading">Young Women Leveraging Tech for Social Innovation</h1><br>
         <p>We want to see young women empowered to leverage technology for social innovation, so that there is greater diversity in the African tech industry. We want high school girls to have an enabling environment to imagine and create new technology that is relevant to a South African context.</p>
 
-        
+        <div class="button">
+                <button class="btn_1">START CODING</button>
+                <button class="btn_2">DONATE NOW</button>
+            </div>
     </section>
 
 
